--- a/module3/css/ss6_css/bai_tap/bai_tap_3_tao_trang_doc_truyen/bai_tap_3_file_css.css
+++ b/module3/css/ss6_css/bai_tap/bai_tap_3_tao_trang_doc_truyen/bai_tap_3_file_css.css
@@ -17,7 +17,7 @@
 }
 
 .kind-of-story {
-
+    color: darkslategray;
     display: inline-block;
     /*padding: 25px 0px ;*/
     width: 12.5%;
@@ -36,6 +36,7 @@
 }
 .story-cover{
     height: 300px;
+    border: 1px solid darkgray;
 }
 .story-col{
     float: left;
@@ -47,8 +48,10 @@
 
 #body {
     clear: both;
-
     width: 100%;
-    /*display: flex;*/
-    /*wra*/
+}
+
+.story-info{
+    display: inline-block;
+    padding-left: 20px;
 }
