--- a/module3/css/ss6_css/bai_tap/bai_tap_3_tao_trang_doc_truyen/bai_tap_3_file_css.css
+++ b/module3/css/ss6_css/bai_tap/bai_tap_3_tao_trang_doc_truyen/bai_tap_3_file_css.css
@@ -3,7 +3,6 @@
     height: 100px;
     width: 100%;
     position: sticky;
-
 }
 
 #logo {
@@ -34,15 +33,21 @@
     margin: 0px;
     padding: 30px 0px;
 }
+.kind-of-story:hover{
+background-color: silver;
+}
 .story-cover{
     height: 300px;
+    width:230px;
     border: 1px solid darkgray;
 }
 .story-col{
     float: left;
     display: inline-block;
     position: relative;
-    width: 50%;
+    width: 45%;
+    background-color:silver;
+    margin: 10px;
 
 }
 
