--- a/module3/css/ss7_web_layout/bai_tap/bai_tap_4_phat_trien_web_xem_hoat_hinh_truc_tuyen/bt4_web_hoat_hinh_css.css
+++ b/module3/css/ss7_web_layout/bai_tap/bai_tap_4_phat_trien_web_xem_hoat_hinh_truc_tuyen/bt4_web_hoat_hinh_css.css
@@ -157,6 +157,8 @@
     border: none;
     text-align: center;
     margin: 5px 0;
+    background-color: #e0dede;
+    padding: 5px 0;
 }
 #head-link span{
     font-weight: bold;
