--- a/module4/ss6_spring_data_jpa/bai_tap/bai_tap_blog_management/src/main/resources/templates/layout.html
+++ b/module4/ss6_spring_data_jpa/bai_tap/bai_tap_blog_management/src/main/resources/templates/layout.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>Layout</title>
+    <title>Blog</title>
 
     <style type="text/css">
         h3 {
