--- a/module4/ss7_spring_data_repository/bai_tap/bai_tap_1_blog_management/src/main/resources/templates/create-category.html
+++ b/module4/ss7_spring_data_repository/bai_tap/bai_tap_1_blog_management/src/main/resources/templates/create-category.html
@@ -8,7 +8,7 @@
 <nav th:replace="/layout::navbar"></nav>
 <div class="m-auto w-50"><h3>New Blog</h3></div>
 
-<form th:action="@{/blog/category/create}" method="post" th:object="${category}" class="w-50 m-auto">
+<form th:action="@{/category/create}" method="post" th:object="${category}" class="w-50 m-auto">
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Category Name</label>
         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
