--- a/module4/ss7_spring_data_repository/bai_tap/bai_tap_1_blog_management/src/main/resources/templates/delete-category.html
+++ b/module4/ss7_spring_data_repository/bai_tap/bai_tap_1_blog_management/src/main/resources/templates/delete-category.html
@@ -9,7 +9,7 @@
 <div class="m-auto w-50"><h3>Do you want to delete category "<span style="color: maroon" th:text="${category.categoryName}"></span>"? </h3>
 </div>
 
-<form th:action="@{/blog/category/delete}" method="post" th:object="${category}" class="w-50 m-auto">
+<form th:action="@{/category/delete}" method="post" th:object="${category}" class="w-50 m-auto">
     <input type="hidden" th:field="*{categoryId}">
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Category Name</label>
