--- a/module4/ss7_spring_data_repository/bai_tap/bai_tap_1_blog_management/src/main/resources/templates/list-category.html
+++ b/module4/ss7_spring_data_repository/bai_tap/bai_tap_1_blog_management/src/main/resources/templates/list-category.html
@@ -25,8 +25,8 @@
     <tr th:each="row,rowStat : ${categoryList}">
         <td th:text="${rowStat.count}"></td>
         <td th:text="${row.categoryName}"></td>
-        <td><a th:href="@{/blog/category/{id}/edit(id=${row.getCategoryId()})}">edit</a></td>
-        <td><a th:href="@{/blog/category/{id}/delete(id=${row.getCategoryId()})}">delete</a></td>
+        <td><a th:href="@{/category/{id}/edit(id=${row.getCategoryId()})}">edit</a></td>
+        <td><a th:href="@{/category/{id}/delete(id=${row.getCategoryId()})}">delete</a></td>
     </tr>
     </tbody>
 </table>
@@ -34,12 +34,12 @@
 <div class="row">
     <div class="col-12">
         <a th:if="${categoryList.hasPrevious()}"
-           th:href="@{/blog/category(page=${categoryList.number - 1})}">Previous</a>
+           th:href="@{/category(page=${categoryList.number - 1})}">Previous</a>
         <span th:text="${categoryList.number+1}"></span>
         /
         <span th:text="${categoryList.totalPages}"></span>
         <a th:if="${categoryList.hasNext()}"
-           th:href="@{/blog/category(page=${categoryList.number + 1})}">Next</a>
+           th:href="@{/category(page=${categoryList.number + 1})}">Next</a>
     </div>
 </div>
 
