--- a/module4/ss8_validation/bai_tap/bai_tap_1_validate_form/src/main/resources/templates/list.html
+++ b/module4/ss8_validation/bai_tap/bai_tap_1_validate_form/src/main/resources/templates/list.html
@@ -12,6 +12,9 @@
     <a href="/form/create">New User</a>
 </div>
 <div>
+    <h5 class="text-success" th:text="${success}"></h5>
+</div>
+<div>
 <table class="table table-hover">
     <tr>
         <th>#</th>
