--- a/module4/ss8_validation/bai_tap/bai_tap_2_validate_thong_tin_bai_hat/src/main/resources/templates/create-song.html
+++ b/module4/ss8_validation/bai_tap/bai_tap_2_validate_thong_tin_bai_hat/src/main/resources/templates/create-song.html
@@ -6,29 +6,33 @@
 </head>
 <body>
 <h2>New Song</h2>
-<a href="music/list">Back to Song List</a>
+<a href="list">Back to Song List</a>
 <form action="create" method="post" th:object="${songDto}">
     <table>
-        <tr>
+        <tr style="height: 50px">
             <td><strong>Song name: </strong></td>
-            <td>
-                <input th:field="*{name}"/>
-            </td>
+            <td><input th:field="*{name}"/></td>
+            <td style="color: maroon" th:errors="*{name}"></td>
         </tr>
-        <tr>
+        <tr style="height: 50px">
             <td><strong>Singer: </strong></td>
             <td><input th:field="*{artist}"/></td>
+            <td  style="color: maroon" th:errors="*{artist}"></td>
+
         </tr>
-        <tr>
+        <tr style="height: 50px">
             <td><strong>Music Type: </strong></td>
             <td><input th:field="*{musicType}"/></td>
+            <td  style="color: maroon" th:errors="*{musicType}"></td>
         </tr>
-        <tr>
-            <td></td>
+        <tr style="height: 50px">
+
+        <td></td>
             <td>
                 <button type="submit">Create</button>
                 <button type="reset">Cancel</button>
             </td>
+            <td></td>
         </tr>
     </table>
 </form>
