--- a/module4/casestudy_module_4/furama/src/main/resources/templates/employee/employee-create.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/employee/employee-create.html
@@ -11,7 +11,7 @@
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
 
         <div class="card w-100">
-            <h2>Update Employee</h2>
+            <h2>New Employee</h2>
             <form action="" method="post">
                 <div class="row">
 
