--- a/module4/casestudy_module_4/furama/src/main/resources/templates/service/service-create.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/service/service-create.html
@@ -13,7 +13,7 @@
         <div class="card w-100">
             <h2>New Service</h2>
             <form action="" method="post">
-            <div class="row">
+                <div class="row">
 
                     <div class="col">
                         <div class="form-group">
@@ -45,7 +45,7 @@
                         <div class="form-group">
                             <label>Rent Type</label>
                             <select>
-                                <option value="">--Select Rent Type--</option>
+                                <option value="" disabled selected>--Select Rent Type--</option>
                                 <option value="">Year</option>
                                 <option value="">Month</option>
                                 <option value="">Day</option>
@@ -57,7 +57,7 @@
                         <div class="form-group">
                             <label>Service Type</label>
                             <select id="service-type" onchange="getInfo()">
-                                <option class="select-items" value="">--Select Service Type--</option>
+                                <option class="select-items" value="" disabled selected>--Select Service Type--</option>
                                 <option class="select-items" value="1">Villa</option>
                                 <option class="select-items" value="2">House</option>
                                 <option class="select-items" value="3">Room</option>
@@ -103,7 +103,7 @@
                         <input type="submit" value="Submit">
                     </div>
 
-            </div>
+                </div>
             </form>
         </div>
 
