--- a/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-create.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-create.html
@@ -11,93 +11,71 @@
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
 
         <div class="card w-100">
-            <h2>New Service</h2>
+            <h2>New Customer</h2>
             <form action="" method="post">
                 <div class="row">
 
                     <div class="col">
                         <div class="form-group">
-                            <label>Service Name</label>
+                            <label>Customer Name</label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label>Area</label>
-                            <input type="text">
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Cost (VND)</label>
-                            <input type="text">
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Max People</label>
-                            <input type="number">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Rent Type</label>
+                            <label>Customer Type</label>
                             <select>
-                                <option value="" disabled selected>--Select Rent Type--</option>
-                                <option value="">Year</option>
-                                <option value="">Month</option>
-                                <option value="">Day</option>
-                                <option value="">Hour</option>
+                                <option value="">--Select Customer Type--</option>
+                                <option value="1">Diamond</option>
+                                <option value="2">Platinum</option>
+                                <option value="3">Gold</option>
+                                <option value="4">Silver</option>
+                                <option value="5">Member</option>
                             </select>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label>Service Type</label>
-                            <select id="service-type" onchange="getInfo()">
-                                <option class="select-items" value="" disabled selected>--Select Service Type--</option>
-                                <option class="select-items" value="1">Villa</option>
-                                <option class="select-items" value="2">House</option>
-                                <option class="select-items" value="3">Room</option>
+                            <label>ID Card</label>
+                            <input type="text">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Gender</label>
+                            <select>
+                                <option value="">--Select Gender--</option>
+                                <option value="1">Male</option>
+                                <option value="2">Female</option>
                             </select>
                         </div>
                     </div>
 
-                    <div class="col" id="standard-room" style="display: none">
+                    <div class="col">
                         <div class="form-group">
-                            <label>Standard Room</label>
+                            <label>Phone Number</label>
                             <input type="text">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Date Of Birth</label>
+                            <input type="date">
                         </div>
                     </div>
 
-                    <div class="col" id="other-convenience" style="display: none">
+                    <div class="col">
                         <div class="form-group">
-                            <label>Other Convenience</label>
+                            <label>Email</label>
+                            <input type="email">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Address</label>
                             <input type="text">
                         </div>
                     </div>
-                    <div class="col" id="pool-area" style="display: none">
-                        <div class="form-group">
-                            <label>Pool Area</label>
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="col" id="number-of-floors" style="display: none">
-                        <div class="form-group">
-                            <label>Number of Floors</label>
-                            <input type="number">
-                        </div>
-                    </div>
-
-                    <div class="col" id="free-service" style="display: none">
-                        <div class="form-group">
-                            <label>Free Service</label>
-                            <input type="text">
-                        </div>
-                    </div>
-
                     <div class="col">
                         <label> </label>
                         <input type="submit" value="Submit">
@@ -115,37 +93,3 @@
 <th:block th:insert="~{index::script}"></th:block>
 </body>
 </html>
-<script>
-    function getInfo() {
-        let temp = $('#service-type').val();
-
-        if (temp === "") {
-            $('#standard-room').hide();
-            $('#other-convenience').hide();
-            $('#pool-area').hide();
-            $('#number-of-floors').hide();
-            $('#free-service').hide();
-        }
-        if (temp === "1") {
-            $('#standard-room').show();
-            $('#other-convenience').show();
-            $('#pool-area').show();
-            $('#number-of-floors').show();
-            $('#free-service').hide();
-        }
-        if (temp === "2") {
-            $('#standard-room').show();
-            $('#other-convenience').show();
-            $('#number-of-floors').show();
-            $('#pool-area').hide();
-            $('#free-service').hide();
-        }
-        if (temp === "3") {
-            $('#free-service').show();
-            $('#standard-room').hide();
-            $('#other-convenience').hide();
-            $('#number-of-floors').hide();
-            $('#pool-area').hide();
-        }
-    }
-</script>
