--- a/module4/casestudy_module_4/furama/src/main/resources/templates/employee/employee-edit.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/employee/employee-edit.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:insert="~{index::head}">
     <meta charset="UTF-8">
-    <title>New Service</title>
+    <title>Employee</title>
     <link rel="stylesheet" href="/assets/css/custom.css">
 </head>
 <body>
@@ -11,49 +11,13 @@
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
 
         <div class="card w-100">
-            <h2>Update Customer</h2>
+            <h2>Update Employee</h2>
             <form action="" method="post">
                 <div class="row">
 
                     <div class="col">
                         <div class="form-group">
-                            <label>Customer Name</label>
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Customer Type</label>
-                            <select>
-                                <option value="">--Select Customer Type--</option>
-                                <option value="1">Diamond</option>
-                                <option value="2">Platinum</option>
-                                <option value="3">Gold</option>
-                                <option value="4">Silver</option>
-                                <option value="5">Member</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label>ID Card</label>
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Gender</label>
-                            <select>
-                                <option value="">--Select Gender--</option>
-                                <option value="1">Male</option>
-                                <option value="2">Female</option>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Phone Number</label>
+                            <label>Employee Name</label>
                             <input type="text">
                         </div>
                     </div>
@@ -66,8 +30,66 @@
 
                     <div class="col">
                         <div class="form-group">
+                            <label>ID Card</label>
+                            <input type="text">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Position</label>
+                            <select>
+                                <option value="" disabled selected>--Select Position--</option>
+                                <option value="">General Manager</option>
+                                <option value="">Manager</option>
+                                <option value="">Employee</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Salary</label>
+                            <input type="text">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Education Degree</label>
+                            <select>
+                                <option value="" disabled selected>--Select Education Degree--</option>
+                                <option value="">University</option>
+                                <option value="">College</option>
+                                <option value="">High School</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Phone Number</label>
+                            <input type="text">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Division</label>
+                            <select>
+                                <option value="" disabled selected>--Select Division--</option>
+                                <option value="">Marketing</option>
+                                <option value="">Restaurant</option>
+                                <option value="">Sale</option>
+                                <option value="">Finance</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
                             <label>Email</label>
                             <input type="email">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Username</label>
+                            <input type="text">
                         </div>
                     </div>
                     <div class="col">
