--- a/module4/casestudy_module_4/furama/src/main/resources/templates/service/service-list.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/service/service-list.html
@@ -2,15 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:insert="~{index::head}">
     <meta charset="UTF-8">
-    <title>Service List</title>
+    <title>Service</title>
     <link rel="stylesheet" href="/assets/css/custom.css">
 </head>
 <body>
 <header th:replace="~{index::header}"></header>
 <session class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
-
-        <table>
+        <h3>Service List</h3>
+        <div class="d-inline-flex">
+        <button class="btn-create">New Service</button>
+        <form action="" method="post">
+            <input class="input-search" type="text" placeholder="Search">
+            <button class="btn-create scrollto" href="#">Search</button>
+        </form>
+        </div>
+        <table style="width: 100%">
             <thead>
             <tr>
                 <th>No.</th>
@@ -42,8 +49,12 @@
                 <td>Item</td>
                 <td>Item</td>
                 <td>Item</td>
-                <td><button class="btn-edit">edit</button></td>
-                <td><button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button></td>
+                <td>
+                    <button class="btn-edit">edit</button>
+                </td>
+                <td>
+                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
+                </td>
             </tr>
             <tr>
                 <td>Item</td>
@@ -58,8 +69,12 @@
                 <td>Item</td>
                 <td>Item</td>
                 <td>Item</td>
-                <td><button class="btn-edit">edit</button></td>
-                <td><button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button></td>
+                <td>
+                    <button class="btn-edit">edit</button>
+                </td>
+                <td>
+                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
+                </td>
             </tr>
             </tbody>
         </table>
@@ -78,7 +93,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Delete</button>
+                        <button type="button" class="btn-modal-delete">Delete</button>
                     </div>
                 </div>
             </div>
@@ -86,6 +101,6 @@
     </div>
 </session>
 <footer th:replace="~{index::footer}"></footer>
-<th:block th:replace="~{index::script}" ></th:block>
+<th:block th:replace="~{index::script}"></th:block>
 </body>
 </html>
