--- a/module4/casestudy_module_4/furama/src/main/resources/templates/index.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
 <header id="header" class="header fixed-top" data-scrollto-offset="0" th:fragment="header">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-        <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+        <a href="/furama" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
             <!-- Uncomment the line below if you also wish to use an image logo -->
             <img src="/assets/img/flogo.png" alt="furama-logo">
             <h1>Furama</h1>
@@ -59,11 +59,11 @@
         <nav id="navbar" class="navbar">
             <ul>
 
-                <li class="dropdown"><a href="#"><span>Home</span></a></li>
-                <li><a class="nav-link scrollto" href="index.html#about">Employee</a></li>
-                <li><a class="nav-link scrollto" href="index.html#services">Customer</a></li>
-                <li><a class="nav-link scrollto" href="index.html#portfolio">Service</a></li>
-                <li><a class="nav-link scrollto" href="index.html#team">Contract</a></li>
+                <li class="dropdown"><a href="/furama"><span>Home</span></a></li>
+                <li><a class="nav-link scrollto" href="/employee">Employee</a></li>
+                <li><a class="nav-link scrollto" href="/customer">Customer</a></li>
+                <li><a class="nav-link scrollto" href="/service">Service</a></li>
+                <li><a class="nav-link scrollto" href="#">Contract</a></li>
                 <li><a class="btn-login"  href="#">Login</a></li>
 
                     <!--                <input class="search scrollto" type="text" placeholder="Search"><a class="btn-getstarted scrollto"-->
