--- a/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-edit.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-edit.html
@@ -14,7 +14,7 @@
             <h2>Update Customer</h2>
             <form action="" method="post">
                 <div class="row">
-
+                    <input type="text" value="id" hidden>
                     <div class="col">
                         <div class="form-group">
                             <label>Customer Name</label>
