--- a/module4/casestudy_module_4/furama/src/main/resources/templates/service/service-list.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/service/service-list.html
@@ -11,7 +11,7 @@
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
         <h3>Service List</h3>
         <div class="d-inline-flex">
-        <button class="btn-create">New Service</button>
+            <a th:href="@{/service/create}"><button class="btn-create">New Service</button></a>
         <form action="" method="post">
             <input class="input-search" type="text" placeholder="Search">
             <button class="btn-create scrollto" href="#">Search</button>
@@ -50,7 +50,7 @@
                 <td>Item</td>
                 <td>Item</td>
                 <td>
-                    <button class="btn-edit">edit</button>
+                    <a th:href="@{/service/edit}"><button class="btn-edit">edit</button></a>
                 </td>
                 <td>
                     <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
@@ -70,7 +70,7 @@
                 <td>Item</td>
                 <td>Item</td>
                 <td>
-                    <button class="btn-edit">edit</button>
+                    <a th:href="@{/service/edit}"><button class="btn-edit">edit</button></a>
                 </td>
                 <td>
                     <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
