--- a/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-list.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-list.html
@@ -76,6 +76,46 @@
                     <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
                 </td>
             </tr>
+            <tr>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>
+                    <a th:href="@{/service/edit}"><button class="btn-edit">edit</button></a>
+                </td>
+                <td>
+                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>
+                    <a th:href="@{/service/edit}"><button class="btn-edit">edit</button></a>
+                </td>
+                <td>
+                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
+                </td>
+            </tr>
             </tbody>
         </table>
 
